--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 .play-label {
   font-size: 18px;
   font-weight: bold;
-  padding: .5em 1.7em;
+  padding: .5em .5em;
 }
 
 .custom-dialog-entry {
@@ -21,7 +21,7 @@
 }
 
 .tag-list-box{
-    margin-top: 7px;
+    /* margin-top: 7px; */
 }
 
 .copy-tag-button {
@@ -36,6 +36,11 @@
   border-radius: 32px;
   padding: 13px;
   border: 1px solid #282c2c;
+}
+
+.power-active {
+  background-color: #d6020c;
+  color: white;
 }
 
 .radio-menu-action:hover, .radio-menu-action:focus {
